add blocklist and call in watson, reddit, post, css ux pointer zoom,

--- a/client/nav.jade
+++ b/client/nav.jade
@@ -25,6 +25,8 @@ template(name='nav')
                     i.fire.large.icon
                 a.icon.item.zoom.pointer(href="/one")
                     i.circle.large.icon
+                a.icon.item.zoom.pointer(href="/ph")
+                    i.exclamation.large.icon
             else
                 .item.zoom.pointer
                     i.yin.yang.loading.big.grey.icon
