--- a/client/reddit.jade
+++ b/client/reddit.jade
@@ -4,8 +4,8 @@ template(name='reddit_view')
             .row 
                 .ten.wide.column
                     .ui.header #{title}
-                    // if youtube_id
-                    //     +youtube_view key='youtube_id' direct=true
+                    a(href=url target='_window')
+                        |#{url}
                     .description.f11.scrolling
                         if url
                             img(src=url class='invert')    
@@ -78,18 +78,15 @@ template(name='reddit_card')
             //     a.image(href="/m/reddit/#{_id}/view")
             //         img.ui.rounded.invert.image(src=thumbnail class=currentUser.invert_class)
         .twelve.wide.column
-            a.image(href="/m/reddit/#{_id}/view")
+            a.zoom.pointer.image(href="/m/reddit/#{_id}/view")
                 if is_youtube
                     .ui.embed(data-source="youtube" data-id=youtube_parse class=currentUser.invert_class)
-                if is_image
-                    img.ui.image(src=url class=currentUser.invert_class)    
+                // if is_image
+                //     img.ui.rounded.image(src=url class=currentUser.invert_class)    
             if youtube_id
                 +youtube_view key='youtube_id' direct=true
-            if image_id
-                a.image(href="/m/reddit/#{_id}/view")
-                    img.ui.image(src="{{c.url image_id }}" class=currentUser.invert_class)
             .content
-                a.ui.header(href="/m/reddit/#{_id}/view") #{title}
+                a.ui.pointer.zoom.header(href="/m/reddit/#{_id}/view") #{title}
                 .description.f11.smallscroll
                     if tone
                         +tone
@@ -104,7 +101,6 @@ template(name='reddit_card')
                 // a(href="/m/reddit/#{_id}/view")
                 //     i.right.chevron.circular.link.big.icon
                 .ui.label #{points}p
-                .ui.label #{imported_points}ip
                 .ui.label(title='domain')
                     i.globe.icon
                     |#{domain}
@@ -119,14 +115,14 @@ template(name='reddit_card')
                 // +autotag
                     
                 each tags
-                    a.ui.label.add_tag #{this}
+                    a.ui.zoom.pointer.label.add_tag #{this}
                 .meta
                     |#{when}
                     if can_edit 
-                        a.ui.circular.icon.button(href="/m/reddit/#{_id}/edit")
+                        a.ui.circular.icon.zoom.pointer.button(href="/m/reddit/#{_id}/edit")
                             i.pencil.icon
-                a.ui.icon.button(href="/m/reddit/#{_id}/view")
-                    i.chevron.right.icon
+                    a.ui.icon.zoom.pointer.circular.large.button(href="/m/reddit/#{_id}/view")
+                        i.chevron.right.large.icon
             .description
                 +comments_view_small   
                 // if url
