test rename to oad, tertiary profile buttons, more nav stuff, some chat filter stuff

--- a/client/nav.jade
+++ b/client/nav.jade
@@ -11,14 +11,20 @@ template(name='nav')
                 if is_admin
                     // .item.zoom.pointer
                     //     .ui.green.header not connected
-                // .icon.item.zoom.pointer
-                //     i.wikipedia.icon
-                // .icon.item.zoom.pointer
-                //     i.reddit.icon
-                // .icon.item.zoom.pointer
-                //     i.video.icon
-                // a.icon.item.zoom.pointer(href="/rentals")
-                //     i.clock.icon
+                .icon.item.zoom.pointer
+                    i.wikipedia.large.icon
+                .icon.item.zoom.pointer
+                    i.reddit.large.icon
+                .icon.item.zoom.pointer
+                    i.video.large.icon
+                a.icon.item.zoom.pointer(href="/rentals")
+                    i.bitcoin.large.icon
+                a.icon.item.zoom.pointer(href="/rentals")
+                    i.biohazard.large.icon
+                a.icon.item.zoom.pointer(href="/rentals")
+                    i.clock.large.icon
+                a.icon.item.zoom.pointer(href="/rentals")
+                    i.clock.large.icon
                 a.icon.item.zoom.pointer(href="/shop")
                     i.store.large.icon
                 a.icon.item.zoom.pointer(href="/tribes")
