--- a/client/blocks.jade
+++ b/client/blocks.jade
@@ -93,8 +93,8 @@ template(name='session_boolean_toggle')
                 
                 
 template(name='session_edit_value_button')
-    // .ui.circular.compact.button.set_session_value(class=calculated_class)
-    a.ui.image.big.link.label.set_session_value(class=calculated_class)
+    // a.ui.image.big.link.label.set_session_value(class=calculated_class)
+    .ui.circular.button.set_session_value(class=calculated_class)
         if icon
             // i.icon(class=icon)
             +i name=icon cl='ui avatar image'
