add profile finance section, mail section, eventually real email sending, rental section, manage gr

--- a/client/nav.jade
+++ b/client/nav.jade
@@ -11,28 +11,30 @@ template(name='nav')
                 if is_admin
                     // .item.zoom.pointer
                     //     .ui.green.header not connected
-                .icon.item.zoom.pointer
-                    i.wikipedia.large.icon
-                .icon.item.zoom.pointer
-                    i.reddit.large.icon
-                .icon.item.zoom.pointer
-                    i.video.large.icon
-                a.icon.item.zoom.pointer(href="/rentals")
-                    i.bitcoin.large.icon
-                a.icon.item.zoom.pointer(href="/rentals")
-                    i.biohazard.large.icon
-                a.icon.item.zoom.pointer(href="/rentals")
-                    i.clock.large.icon
+                // .icon.item.zoom.pointer
+                //     i.wikipedia.large.icon
+                // .icon.item.zoom.pointer
+                //     i.reddit.large.icon
+                // .icon.item.zoom.pointer
+                //     i.video.large.icon
+                // a.icon.item.zoom.pointer(href="/rentals")
+                //     i.bitcoin.large.icon
+                // a.icon.item.zoom.pointer(href="/rentals")
+                //     i.biohazard.large.icon
                 a.icon.item.zoom.pointer(href="/rentals")
                     i.clock.large.icon
-                a.icon.item.zoom.pointer(href="/shop")
-                    i.store.large.icon
-                a.icon.item.zoom.pointer(href="/tribes")
-                    i.fire.large.icon
+                // a.icon.item.zoom.pointer(href="/rentals")
+                //     i.clock.large.icon
+                // a.icon.item.zoom.pointer(href="/shop")
+                //     i.store.large.icon
+                // a.icon.item.zoom.pointer(href="/tribes")
+                //     i.fire.large.icon
+                a.icon.item.zoom.pointer(href="/mail")
+                    i.envelope.grey.large.icon
                 a.icon.item.zoom.pointer(href="/one")
                     i.circle.large.icon
-                a.icon.item.zoom.pointer(href="/ph")
-                    i.exclamation.large.icon
+                // a.icon.item.zoom.pointer(href="/ph")
+                //     i.exclamation.large.icon
             else
                 .item.zoom.pointer
                     i.yin.yang.loading.big.grey.icon
