--- a/client/nav.jade
+++ b/client/nav.jade
@@ -23,10 +23,8 @@ template(name='nav')
                 //     i.biohazard.large.icon
                 a.icon.item.zoom.pointer(href="/rentals")
                     i.clock.large.icon
-                // a.icon.item.zoom.pointer(href="/rentals")
-                //     i.clock.large.icon
-                // a.icon.item.zoom.pointer(href="/shop")
-                //     i.store.large.icon
+                a.icon.item.zoom.pointer(href="/shop")
+                    i.store.large.icon
                 // a.icon.item.zoom.pointer(href="/tribes")
                 //     i.fire.large.icon
                 a.icon.item.zoom.pointer(href="/mail")
