--- a/client/styles.css
+++ b/client/styles.css
@@ -9,7 +9,7 @@ body {
     /*margin-top: 5em;*/
     /*background: rgba(200,200,200,1) !important;*/
     /* filter: invert(1) !important; */
-     overscroll-behavior: none; 
+     /*overscroll-behavior: none; */
     transition: all .5s ease !important;
     /* background: #0e0e44 !important; */
 }
@@ -364,7 +364,7 @@ a.goto_article {
     cursor: pointer !important;
     /* color: black !important; */
     /* font-size: 130% !important; */
-    /*zoom: 110% !important;*/
+    zoom: 110% !important;
     /* padding-top: 5em !important; */
     /*transform: scale(1.) !important;*/
     z-index: 1000 !important;
