--- a/parts/profile.jade
+++ b/parts/profile.jade
@@ -10,12 +10,12 @@ template(name='profile')
                         +image_edit key='profile_image_id' icon='picture' title='avatar' direct=true
                     else 
                         a(href="/u/#{username}/")
-                            img.ui.small.inline.circular.image.boop(src="{{c.url profile_image_id height=500 width=500 gravity='face' crop='fill'}}") 
-                // a.ui.header.refresh_user_stats(href="/u/#{username}") 
-                //     if spirit_animal
-                //         span(title="spirit animal #{spirit_animal}")
-                //             +icolor name=spirit_animal cl='ui inline image'
-                //     |#{name}
+                            img.ui.small.inline.circular.invert.image.boop(src="{{c.url profile_image_id height=500 width=500 gravity='face' crop='fill'}}") 
+                a.ui.header.refresh_user_stats(href="/u/#{username}") 
+                    if spirit_animal
+                        span(title="spirit animal #{spirit_animal}")
+                            +icolor name=spirit_animal cl='ui inline image'
+                    |#{name}
                 // div
                 a.ui.small.inline.header.refresh_user_stats(href="/u/#{username}") 
                     |@#{username}
@@ -61,14 +61,14 @@ template(name='profile')
                     .ui.disabled.circular.button(title='send points')
                         i.red.gift.large.icon
                         span send pts
-                    // .ui.disabled.basic.circular.button(title='request points')
-                    //     i.concierge.bell.teal.icon
-                    //     span request
+                    .ui.disabled.basic.circular.button(title='request points')
+                        i.concierge.bell.teal.icon
+                        span request
                         
                 if is_current_user
                     a.ui.circular.icon.button.logout(href="#" title='log out')
                         i.sign.out.big.icon
-                        // |log out
+                        |log out
                 
                 unless is_current_user
                     if currentUser
@@ -76,6 +76,12 @@ template(name='profile')
                         +user_friend_button 
                 if is_dev
                     +print_this
+                each friends
+                    a.profile_nav_item(href="/u/#{username}" title=username)
+                        if profile_image_id
+                            img.ui.mini.inline.circular.invert.image(src="{{c.url profile_image_id height=500 width=500 gravity='face' crop='fill'}}")
+                        else
+                            .ui.circular.label #{initials}
             .twelve.wide.column
                 +session_edit_value_button key='view_user_section' value='dashboard' label='dashboard' icon='dashboard'
                 +session_edit_value_button key='view_user_section' value='about' label='about' icon='info'
