first log_event from logging in, shown on dashboard, quick add post in dashboard, clean subs

--- a/client/blocks.jade
+++ b/client/blocks.jade
@@ -97,11 +97,11 @@ template(name='session_edit_value_button')
     .ui.circular.zoom.button.set_session_value(class=calculated_class)
         if icon
             // i.icon(class=icon)
-            +i name=icon cl='ui avatar image'
-        if label
-            |#{label}
-        else 
-            |#{value}
+            +i name=icon cl='ui image'
+        // if label
+        //     |#{label}
+        // else 
+        //     |#{value}
 
 
 
