--- a/client/nav.jade
+++ b/client/nav.jade
@@ -74,6 +74,15 @@ template(name='nav')
                 a.pointer.zoom.item(href="/login" title='login')
                     i.large.sign.in.icon
                     // |enter
+    .ui.large.breadcrumb
+        .section home
+        .divider \
+        .section store
+        .divider \
+        .active.section t-shirt
+
+
+
 
 template(name='footer')
     .ui.fluid.basic.attached.segment.footer
