--- a/client/client.jade
+++ b/client/client.jade
@@ -64,7 +64,12 @@ template(name='layout')
         //     +bottom_nav
     +chatpop
     // +footer
-
+    +ad
+    
+    
+template(name='ad')
+    .ui.fluid.segment
+        .ui.header ad
 
 
 
